[package]
name = "simple_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
mongodb = "2.3.0"
futures = "0.3.25"
serde_json = "1.0.91"
anyhow = "1.0.68"
bson = { version = "2", features = ["chrono-0_4"] } 
chrono = "0.4" # Used for setting DateTimes
dotenv = "0.15.0"
postgrest = "1.0"
serde = { version = "1", features = ["derive"] }
near-jsonrpc-client = { version = "0.4.1", features = ["any"] }
near-jsonrpc-primitives = "0.15.0"
near-primitives = "0.15.0"
env_logger = "0.10.0"
reqwest = "0.11.14"
